tests/paczka1/small_fuzzy/24480459.err
Error in line 6: S319 S798 49,6
Error in line 7: kkWAl890CUV S798 3,9
